Change background colors

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
   <div class="content">
     <form action="" novalidate>
       <label for="email">Email</label>
-      <input type="email" name="email" id="email">
+      <input type="email" name="email" id="email" required>
       <label for="country">Country</label>
       <select name="country" id="country">
         <option value="United States">United States</option>
@@ -20,11 +20,11 @@
         <option value="New Zealand">New Zealand</option>
       </select>
       <label for="zipcode">Zip code</label>
-      <input type="text" name="zipcode" id="zipcode">
+      <input type="text" name="zipcode" id="zipcode" required>
       <label for="password">Password</label>
-      <input type="password" name="password" id="password">
+      <input type="password" name="password" id="password" required>
       <label for="confirm-password">Confirm Password</label>
-      <input type="password" name="confirm-password" id="confirm-password">
+      <input type="password" name="confirm-password" id="confirm-password" required>
       <button>Submit</button>
     </form>
   </div>
